增加提供给app的接口
